--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
 		"remark-unwrap-images": "^4.0.0",
 		"tailwindcss": "^3.4.3",
 		"typescript": "^5.4.4"
-	}
+	},
+	"packageManager": "pnpm@9.0.6"
 }
